# finetune1210_thunder

./: .env.example  .gitignore  README.md  deberta_finetune_1210.py  fetch_assets.py  finetune_architecture.md  new_data_test.py  pyproject.toml  requirements.txt  result_analysis.py  upload_to_hf.py
data/: .gitignore
output/: .gitignore
